# file_watcher

./: README.md  pyproject.toml
src/file_watcher/: __init__.py  __main__.py
