[project]
name = "file-watcher"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pieter Laeremans", email = "pieter@laeremans.org" }
]
dependencies = [
    "watchdog>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"file-watcher" = "file_watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/file_watcher"]
